Fix resizing not working on mobile touch event

--- a/resources/vanishing-header-delta/style.css
+++ b/resources/vanishing-header-delta/style.css
@@ -1,8 +1,3 @@
-html,
-body {
-  height: 150%;
-}
-
 header {
   position: sticky;
   top: 0;
@@ -10,6 +5,7 @@ header {
   justify-content: space-between;
   padding: 1em;
   box-shadow: 0px 0px 10px #cecece;
+  background-color: #fffc;
 }
 
 header > ul {
