--- a/resources/vanishing-header-direction/style.css
+++ b/resources/vanishing-header-direction/style.css
@@ -1,8 +1,3 @@
-html,
-body {
-  height: 150%;
-}
-
 header {
   position: sticky;
   top: 0;
@@ -11,6 +6,7 @@ header {
   padding: 1em;
   box-shadow: 0px 0px 10px #cecece;
   transition: top 0.5s;
+  background-color: #fffc;
 }
 
 header > ul {
